Dear Emacs, please make this -*-Text-*- mode!

     	    NEWS for gWidgetsRGtk2

Changes for version 0.0-81
--------------------------
 

Changes for version 0.0-80
--------------------------
* attempt to fix drag and drop 

Changes for version 0.0-79
--------------------------
* fix to ggraphics.R for allocations

Changes for version 0.0-78
--------------------------
* changes to gvarbrowser

Changes for version 0.0-77
--------------------------
 
* change in dnd, icons to avoid using "Namespce" functions

* put back tag code into gtext

* fix to gdf and do.subset=TRUE. (Thanks Stephanie)

* fix to font.attr argument of insert method for gtext. (Had commented
  out for speed, but forgot to fix ...) THanks Yvonnick.

Changes for version 0.0-76
--------------------------
* requires gWidgets 0.0-46

* added generics for $, [[ and [[<- to work with underlying toolkit object

* use info bar for galert when parent is a gwindow.

* bug fix for gdf and sorting (Thanks Stephanie)

* do.buttons argument for gbasicdialog. Passed as hidden argument, or
  formal one with newer gWidgets


Changes for version 0.0-75
--------------------------

* bug fix for Observer class to allow proto methods

* reworked fonts for gtext so that tags are not preloaded. That was
  much too slow.

* new editable generic, but no methods yet

* focus method for gwindow to raise window

Changes for version 0.0-74
--------------------------

* bug fixes svalue<-gtable and block_handlers

Changes for version 0.0-73
--------------------------

* fix gstatusbar. OVerride default label, as it truncated the bottom
  of the message with a recent GTK. However, removed support for
  popping stack of messages. Likely not an issue, but can be put back
  if requested.

* fix to gradio to avoid premature garbage collection leading to crash
  under tctorture. There may still be an issue with gbutton. (If so,
  pass in a parent container to the constructor.) 
